crates/lang/macro/tests/ui/fail/C-14-payable-constructor.stderr
error: encountered conflicting ink! attribute argument
 --> $DIR/C-14-payable-constructor.rs:9:28
  |
9 |         #[ink(constructor, payable)]
  |                            ^^^^^^^

error: constructor is implicitly payable
 --> $DIR/C-14-payable-constructor.rs:9:28
  |
9 |         #[ink(constructor, payable)]
  |                            ^^^^^^^
